peac_dev/force-app/main/default/objects/ListViews__c/ListViews__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting stores the where conditions for the various list views so a call out isn&apos;t needed unless there was a recent modification to the list view.</description>
    <label>List Views Settings</label>
</CustomObject>