peac_dev/force-app/main/default/objects/ListViews__c/fields/Condition10__c.field-meta.xml
<CustomField>
    <fullName>Condition10__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The tenth condition</inlineHelpText>
    <label>Condition 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>