peac_dev/force-app/main/default/objects/ListViews__c/fields/Condition1__c.field-meta.xml
<CustomField>
    <fullName>Condition1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The first condition of the list view</inlineHelpText>
    <label>Condition 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>