peac_dev/force-app/main/default/objects/ListViews__c/fields/Condition2__c.field-meta.xml
<CustomField>
    <fullName>Condition2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The second condition of the list view</inlineHelpText>
    <label>Condition 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>