peac_dev/force-app/main/default/objects/ListViews__c/fields/OrderBy__c.field-meta.xml
<CustomField>
    <fullName>OrderBy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The order by condition of the list view</inlineHelpText>
    <label>Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>