peac_dev/force-app/main/default/objects/ListViews__c/listViews/All_View.listView-meta.xml
<ListView>
    <fullName>All_View</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Condition1__c</columns>
    <columns>Condition10__c</columns>
    <columns>Condition2__c</columns>
    <columns>Condition3__c</columns>
    <columns>Condition4__c</columns>
    <columns>Condition5__c</columns>
    <columns>Condition6__c</columns>
    <columns>Condition7__c</columns>
    <columns>Condition8__c</columns>
    <columns>Condition9__c</columns>
    <columns>OrderBy__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All View</label>
</ListView>